# hw_drf_django

./: .env.example  Dockerfile  README.md  data.json  docker-compose.yaml  pyproject.toml
config/: celery.py  settings.py  urls.py
materials/: apps.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_courses_owner_lesson_owner.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
users/management/commands/: csu.py  fill_payments.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_alter_payments_options.py  0004_alter_payments_course_alter_payments_lesson.py  0005_alter_payments_user.py  0006_subscribe.py  0007_subscription_delete_subscribe.py  0008_payment.py
